# cmake-modular-googletest-template

./: .gitignore  README.md  run_tests.sh  run_tests_docker.sh
cmake/: toolchain_host.cmake  toolchain_target.cmake
docker/: Dockerfile_componentTesting
scripts/: run_tests.sh  tidy.sh
src/: CMakeLists.txt  bar.c
src/__config/: ClangTidyConfig.cmake  clang-tidy-config.yml
src/components/boo/: CMakeLists.txt  boo.c  boo.h
src/components/boo/tests/: CMakeLists.txt  boo_tests.cc
src/components/foo/: CMakeLists.txt  foo.c  foo.h
src/config/: ClangTidyConfig.cmake
